# crewai-workshop

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  dip.yml  docker-compose.yml  pyproject.toml
demos/001_basics/: run.py
demos/002_basics_with_custom_llm/: run.py
demos/002_multiple_agents/: run.py
demos/003_basics_configs/: run.py
demos/003_basics_configs/src/joke_teller/: crew.py
demos/003_basics_configs/src/joke_teller/config/: agents.yaml
demos/004_basics_output_formats/: run.py
demos/004_basics_output_formats/src/joke_teller/: crew.py
demos/005_basics_tools/: run.py
demos/005_basics_tools/src/: joke_with_explanation.py
demos/005_basics_tools/src/joke_teller/: crew.py
demos/006_multiple_agents_pipeline/: run.py
demos/006_multiple_agents_pipeline/src/joke_teller/: tools.py
demos/007_tracing_with_phoenix/src/joke_teller/: crew.py
demos/008_conditional_tasks/src/: videos_information.py
demos/008_conditional_tasks/src/joke_teller/: crew.py
demos/008_conditional_tasks_and_guardrails/: run.py
demos/008_conditional_tasks_and_guardrails/src/: joke_with_explanation.py  videos_information.py
demos/008_conditional_tasks_and_guardrails/src/joke_teller/: crew.py  tools.py
demos/009_async_tasks_execution/src/joke_teller/: crew.py  tools.py
demos/010_cli/: README.md
demos/010_cli/comedy_crew/: README.md  pyproject.toml
demos/011_knowledge/: run.py
demos/011_knowledge/knowledge/: customize.json
demos/011_knowledge/src/breweries_crew/: crew.py
demos/012_memory/: run.py
demos/012_memory/src/joke_teller/: crew.py
demos/013_code_execution/: run.py
demos/013_code_execution/src/heads_or_tails/: __init__.py  crew.py
demos/014_manager_and_planner/: run.py
demos/014_manager_and_planner/knowledge/: user.json
demos/014_manager_and_planner/src/personal_assistant/: crew.py  tools.py
demos/015_flows/: run.py
demos/015_flows/src/joke_flow/: flow.py
demos/015_flows/src/joke_rater/: crew.py  joke_rating.py
demos/015_flows/src/joke_teller/: crew.py
shared/: llm.py
(+23 files in other folders)
