[project]
name = "CrewAIWorkshop"
version = "0.0.1"
description = "Demos for CrewAI Workshop"
authors = [{ name = "Valiantsin Zavadski", email = "val@awerty.ai" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "arize-phoenix==7.9.2",
    "asyncio==3.4.3",
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "langchain_community==0.3.18",
    "openinference-instrumentation-crewai==0.1.6",
    "openinference-instrumentation-litellm==0.1.11",
    "mem0ai>=0.1.56",
    "setuptools>=42",
    "youtube_search>=2.1.2",
    "wikipedia>=1.4.0",
    "pyowm>=3.3.0",
]

[build-system]
requires = ["setuptools", "wheel"]  # Or another build backend
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # This maps the root package to the "src" directory

[tool.setuptools.packages.find]
where = ["src"]

[tool.crewai]
type = "crew"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
extend-exclude = [
    "scripts",
]

target-version = "py312"
